<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GOD BOOK</string>
    <string name="version">3</string>
    <string name="no_media_warning">Storage Media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="open_failed">Unable to open document</string>
    <string name="content_failure">%1$s: %2$s</string>
   
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title">%1$s %2$s: %3$s</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter Password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching...</string>
    <string name="link_control">Link highlighting and enabling</string>
    <string name="no_further_occurences_found">No further occurences found</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="copy">Copy</string>
    <string name="strike_out">Strike out</string>
    
    <string name="about">About</string>
	
	<string name="goto_page">Go to page...</string>
	<string name="goto_page_dialog_title">Go to page</string>
	<string name="goto_page_go_button">Go</string>
	<string name="rotate_page_left">Rotate left</string>
	<string name="rotate_page_right">Rotate right</string>
	<string name="find_text">Find...</string>
	<string name="find_dialog_title">Find text</string>
	<string name="find_go_button">Find</string>
	<string name="find_cancel_button">Cancel</string>
	<string name="clear_find_text">Clear find</string>
	<string name="choose_file">Open...</string>
	<string name="toggle_invert">Invert</string>
	<string name="toggle_fine_zoom">Toggle fine zoom</string>
	<string name="set_as_home">Set current folder as home</string>
	<string name="go_home">Home</string>
	<string name="cancel">Cancel</string>
	<string name="searching_for">Searching for "%1$s"</string>
	<string name="page_of">Page %1$d of %2$d</string>
	<string name="options">Options</string>
	<string name="zoom_animation">Zoom buttons</string>
	<string-array name="zoom_animations">
		<item>100</item>
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>
	<string-array name="zoom_animation_labels">
		<item>disabled</item>
		<item>disappear</item>
		<item>almost disappear</item>
		<item>fade</item>
	</string-array>
	<string name="default_zoom_animation">2</string> 
	<string name="page_animation">Page number/count</string>
	<string-array name="page_animations">
		<item>100</item>
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
	</string-array>
	<string-array name="page_animation_labels">
		<item>disabled</item>
		<item>disappear</item>
		<item>almost disappear</item>
		<item>fade</item>
		<item>show always</item>
	</string-array>
	<string name="default_page_animation">2</string> 
	<string name="fade_speed">Zoom and page fade wait</string>
	<string-array name="fade_speeds">
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
	</string-array>
	<string-array name="fade_speed_labels">
		<item>1 second</item>
		<item>2 seconds</item>
		<item>3 seconds</item>
		<item>4 seconds</item>
		<item>5 seconds</item>
		<item>6 seconds</item>
		<item>7 seconds</item>
	</string-array>
	<string name="default_fade_speed">7</string> 
	<string name="invert">Invert colors</string>
	<string name="dirs_first">List directories first</string>
	<string name="show_extension">Show .pdf extension</string>
	<string name="orientation">Orientation</string>
	<string name="default_orientation">0</string>
	<string-array name="orientation_labels">
	<item>automatic</item>
	<item>harder to change</item>
	<item>lock to portrait</item>
	<item>lock to landscape</item>
	</string-array>
	<string-array name="orientations">
	<item>0</item>
	<item>3</item>
	<item>1</item>
	<item>2</item>
	</string-array>
	<string name="viewer">PDF Viewer</string>
	<string name="selector">File Chooser</string>
	<string name="fullscreen">Fullscreen</string>
	<string name="render_ahead">Render ahead</string>
	<string name="render_ahead_sub">Uses more memory but faster forward scrolling.</string>
	<string name="gray">Grayscale</string>
	<string name="gray_sub">No colors, slightly slower, but uses less memory.</string>
	<string name="page">Page</string>
	<string name="color_mode">Color mode</string>
	<string-array name="color_mode_labels">
		<item>Normal color</item>
		<item>Inverted color</item>
		<item>Normal black and white</item>
		<item>Inverted black and white</item>
		<item>Black on yellowish</item>
		<item>Green on black</item>
		<item>Red on black</item>
	</string-array>
	<string-array name="color_modes">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
	</string-array>
	<string name="default_color_mode">0</string>
	<string name="omit_images">Skip images</string>
	<string name="vertical_scroll_lock">Vertical scroll lock</string>
	<string name="vertical_scroll_lock_sub">To scroll horizontally, you must first move horizontally 1/5 of the screen width.</string>
	<string name="box">PDF page box type</string> 
	<string-array name="box_labels">
		<item>ArtBox</item>
		<item>BleedBox</item>
		<item>CropBox</item>
		<item>MediaBox</item>
		<item>TrimBox</item>
	</string-array>
	<string-array name="boxes">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
	</string-array>
	<string name="default_box">2</string>
	<string name="extra_cache">Extra cache memory</string> 
	<string name="extra_cache_sub">Using extra cache memory can improve scrolling smoothness at the expense of stability.</string> 
	<string-array name="extra_caches">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>4</item>
		<item>6</item>
		<item>8</item>
		<item>10</item>
	</string-array>
	<string-array name="extra_cache_labels">
		<item>none</item>
		<item>1 MB</item>
		<item>2 MB</item>
		<item>4 MB</item>
		<item>6 MB</item>
		<item>8 MB</item>
		<item>10 MB</item>
	</string-array>
	<string name="default_extra_cache">0</string>
	<string name="side_margin">Extra side margins</string>	
	<string name="default_side_margin">0</string>
		<string-array name="margins">
	<item>0</item>
	<item>5</item>
	<item>10</item>
	<item>20</item>
	</string-array>
		<string-array name="margin_labels">
	<item>none</item>
	<item>small</item>
	<item>medium</item>
	<item>large</item>
	</string-array>
	<string name="top_margin">Space between pages</string>
	<string name="default_top_margin">10</string>
	<string name="remove_from_recent">Remove from recent</string>
	<string name="delete">Delete file</string>
	<string-array name = "double_tap_actions">
	<item>0</item>
	<item>1</item>
	<item>2</item>
	</string-array>
	<string-array name="double_tap_action_labels">
	<item>none</item>
	<item>zoom in</item>
	<item>zoom in or back out</item>
	</string-array>
	<string name="default_double_tap_action">2</string>
	<string name="double_tap_action">Double tap action</string>
	<string-array name = "action_pairs">
	<item>0</item>
	<item>1</item>
	<item>2</item>
	<item>9</item>
	<item>3</item>
	<item>4</item>
	<item>5</item>
	<item>6</item>
	<item>7</item>
	<item>8</item>
	<item>10</item>
	<item>11</item>
	<item>12</item>
	</string-array>
	<string-array name = "action_pair_labels">
	<item>none</item>
	<item>screen up/down</item>
	<item>page up/down</item>
	<item>page prev/next</item>
	<item>zoom 1.02X</item>
	<item>zoom 1.05X</item>
	<item>zoom 1.1X</item>
	<item>zoom 1.2X</item>
	<item>zoom 1.414X</item>
	<item>zoom 2X</item>
	<item>screen up/down reversed</item>
	<item>page up/down reversed</item>
	<item>page prev/next reversed</item>
	</string-array>
	<string name="volume_pair">Volume -/+ key actions</string>
	<string name="up_down_pair">Up/Down key actions</string>
	<string name="left_right_pair">Left/Right key actions</string>
	<string name="zoom_pair">Zoom button actions</string>
	<string name="long_zoom_pair">Long press zoom button actions</string>
	<string name="right_up_down_pair">Nook Touch right up/down key actions</string>
	<string name="top_bottom_tap_pair">Action for top/bottom tap</string>
	<string name="default_volume_pair">1</string>
	<string name="default_up_down_pair">1</string>
	<string name="default_left_right_pair">2</string>
	<string name="default_zoom_pair">7</string>
	<string name="default_long_zoom_pair">8</string>
	<string name="default_right_up_down_pair">1</string>
	<string name="default_top_bottom_tap_pair">0</string>
	<string name="hw">Hardware Specific Settings</string>
	<string name="eink">E-ink optimizations</string>
	<string name="nook2">Nook2 fast e-ink refresh</string>
	<string name="disabled">Disabled</string>
	<string name="keep_on">Keep screen on while reading</string>
	<string name="show_zoom_on_scroll">Show zoom when scrolling</string>
	<string name="history">Show recent files</string>
	<string name="admob">a153142d99e1f0a</string>
	<string name="Welcome">To view all the Ebook any time any where , you need to download those Ebook and store it locally for local access .Please  download the file or please install the Online ebook version.</string>
	<string name="tutorial">Tutorial</string>

</resources>
