<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout" >
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ViewAnimator
        android:id="@+id/switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="12dp" >

        <RelativeLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/docNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/linkButton"
                android:layout_alignParentLeft="true"
                android:paddingLeft="16dp"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageButton
                android:id="@+id/linkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/selectButton"
                android:contentDescription="@string/link_control"
                android:background="@drawable/button"
                android:src="@drawable/ic_link" />

            <ImageButton
                android:id="@+id/selectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/outlineButton"
                android:contentDescription="@string/select"
                android:background="@drawable/button"
                android:src="@drawable/ic_select" />

            <ImageButton
                android:id="@+id/outlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/reflowButton"
                android:contentDescription="@string/search_document"
                android:background="@drawable/button"
                android:src="@drawable/ic_list" />

            <ImageButton
                android:id="@+id/reflowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/searchButton"
                android:contentDescription="@string/search_document"
                android:background="@drawable/button"
                android:src="@drawable/ic_reflow" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/search_document"
                android:background="@drawable/button"
                android:src="@drawable/ic_magnifying_glass" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <ImageButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/cancel"
                android:background="@drawable/button"
                android:src="@drawable/ic_cancel" />

            <EditText
                android:id="@+id/searchText"
                android:background="@drawable/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/cancel"
                android:layout_toLeftOf="@+id/searchBack"
                android:inputType="text"
                android:hint="@string/search"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/searchBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/searchForward"
                android:contentDescription="@string/search_backwards"
                android:background="@drawable/button"
                android:src="@drawable/ic_arrow_left" />

            <ImageButton
                android:id="@+id/searchForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/search_forwards"
                android:background="@drawable/button"
                android:src="@drawable/ic_arrow_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <ImageButton
                android:id="@+id/cancelSelectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/cancel"
                android:background="@drawable/button"
                android:src="@drawable/ic_cancel" />

            <ImageButton
                android:id="@+id/strikeOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/copySelectButton"
                android:contentDescription="@string/strike_out"
                android:background="@drawable/button"
                android:src="@drawable/ic_strike" />

            <ImageButton
                android:id="@+id/copySelectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/copy"
                android:background="@drawable/button"
                android:src="@drawable/ic_clipboard" />

        </RelativeLayout>
    </ViewAnimator>

    <RelativeLayout
        
        android:id="@+id/lowerButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >
        
        <SeekBar
            android:id="@+id/pageSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="12dp"
            android:progressDrawable="@drawable/seek_progress"
            android:thumb="@drawable/seek_thumb" />
        <com.google.ads.AdView android:id="@+id/ad"
                                    android:layout_width="wrap_content"
                                    android:layout_alignTop="@+id/pageSlider"
                           android:layout_height="wrap_content"
                           ads:adSize="BANNER"
                           ads:adUnitId="a153131664e1091"
                           ads:testDevices="6206DBC7AC019F106680DB33c70F8601"
                           ads:loadAdOnCreate="true"/>

        <TextView
            android:id="@+id/pageNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pageSlider"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/page_num"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pageSlider"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/page_num"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />
    
     
</RelativeLayout>

<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#9969ACE7"
        android:id="@+id/top_layout" 
        android:padding="20dp"
        >

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:background="@color/button_normal"
        android:drawableLeft="@drawable/ic_link"
        android:text="Access Link in Ebook"
        android:textColor="@color/seek_progress" />
       
    <Button
        android:id="@+id/button2"
          android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
  
        android:layout_below="@+id/button1"
        
        android:background="@color/button_normal"
        android:drawableLeft="@drawable/ic_select"
        android:text="Edit Ebook"
        android:textColor="@color/seek_progress" />

    <Button
        android:id="@+id/button3"
          android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
   
        android:layout_below="@+id/button2"
        
        android:background="@color/button_normal"
        android:drawableLeft="@drawable/ic_list"
        android:text="Ebook as Listview"
        android:textColor="@color/seek_progress" />

    <Button
        android:id="@+id/button4"
          android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/button3"
        android:background="@color/button_normal"
        android:drawableLeft="@drawable/ic_reflow"
        android:text="View Ebook as Text"
        android:textColor="@color/seek_progress" />

    <Button
        android:id="@+id/button5"
          android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/button4"
        
        android:background="@color/button_normal"
        android:drawableLeft="@drawable/ic_magnifying_glass"
        android:text="Search Ebook"
        android:textColor="@color/seek_progress" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:text="Access this tutorial menu anytime by clicking on menu"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
</FrameLayout>
